--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TelloApp</title>
+  <meta name="google-site-verification" content="QzP82ubnS787XCq04G2aKQ4lV3DdkIOgGmow8u3ByrQ" />
+  <title>A Desktop Tello App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="download.jpeg">
   <link id="app-theme" rel="stylesheet" href="/themes/lara/blue/dark/theme.css">
 </head>
 <body>
